# dataici

./: .gitignore  README.md  app.py  publicar.bat  publicar.sh  pyproject.toml
backend/: main.py  requirements.txt
backend/blocks/: append_column.py  drop_columns.py  filter_rows.py  handle_missings.py  read_excel.py  reorder_columns.py  set_dtypes.py  write_csv.py
dataici/: __init__.py  charts.py  cli.py  main.py
dataici/blocks/: aggregate.py  concatenate.py  load_csv.py  rename_columns.py  replace_values.py  resample.py  sample_rows.py  select_columns.py  set_index.py
dataici/static/: index.html
dataici/static/assets/: index-BhAZT75n.js  index-CYGnphoW.js  index-C_LllOCl.css  index-CgXmGD0p.js  index-DFUGiaBd.js  index-DNipCztr.js  index-DkMo8xL1.js  index-W641om-N.js
docs/: index.html
docs/assets/: index-BUh4eYRS.js  index-Bs4f6XOR.js  index-CsD1vqwc.js  index-DLK3-mBP.css  index-DVWsry41.js  index-Dk2fZRG_.js  index-IOoUg6C5.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/nodes/: BlockNode.jsx
frontend/src/pages/: LandingPage.jsx  ProjectsPage.jsx
frontend/src/panels/: BlockDesigner.jsx  ParamsPanel.jsx  ResultsView.jsx  Sidebar.jsx
